--- a/HtmlApi.html
+++ b/HtmlApi.html
@@ -13,73 +13,100 @@
  -->
 </head>
 <body>
-	<div class="container">
-		<div class="jumbotron">
-			<header class="top-bar">
-				<h1>
-					<span><img alt="WattDepot logo" src="wattdepot-logo.png">
-						WattDepot3 HTML API</span>
-				</h1>
-			</header>
-		</div>
-		<div class="row row-offcanvas row-offcanvas-left">
-			<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar"
-				role="navigation">
-				<div class="well sidebar-nav">
-					<ul class="nav nav-pills nav-stacked">
-						<li class="active"><a href="HtmlApi.html">Home</a></li>
-						<li><a href="Locations.html">Locations</a>
-						<li><a href="Sensors.html">Sensors</a>
-						<li><a href="SensorModels.html">Sensor Models</a>
-						<li><a href="SensorGroups.html">Sensor Groups</a>
-						<li><a href="WattDepositories.html">WattDepositories</a></li>
-						<li><a href="Measurements.html">Measurements</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-9">
-				<div class="content-box">
-					<div class="content-box-title">WattDepot3</div>
-					<div class="content-box-contents">
-						<p>The WattDepot3 HTTP API accepts measurements about the
-							physical world.</p>
-						<p>In WattDepot3's model there are:
-						<ul>
-							<li><strong>Sensors</strong> - Sensors represent the device
-								that measures the physical universe. Sensors have:
-								<ul>
-									<li><strong>URIs</strong> - A Internet address where
-										sensor processes can access their measurements. (<em>Note:</em>
-										Sensor processes are not modeled by WattDepot3.)</li>
-									<li><strong>Locations</strong> - The location on the earth
-										of the sensor (e.g. Latitude, Longitude, Altitude,
-										Description).</li>
-									<li><strong>Sensor Models</strong> A description of the
-										type of sensor, the protocol and version it is using.</li>
-									<li><strong>List of Properties</strong> - A potentially
-										empty list of properties that describe the individual sensor.</li>
-								</ul></li>
-							<li><strong>Sensor Groups</strong> - Are groups of sensors.
-								WattDepot uses these groups for aggregation. We can group all
-								the energy sensors in a building into a single group.</li>
-							<li><strong>WattDepositories</strong> - Are responsible for
-								storing the measurements made by the Sensors. They have an
-								associated measurement type.</li>
-							<li><strong>Measurements</strong> - Are made by Sensors and
-								consist of the sensor that made the measurement, the time the
-								measurement was made, the value of the measurement and the
-								measurement type.
-						</ul>
-						<p>The individual pages to the left describe the HTTP API for Creating,
-							Reading, Updating, and Deleting these entities.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="//code.jquery.com/jquery.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="dist/js/bootstrap.min.js"></script>
+    <div class="container">
+        <div class="jumbotron">
+            <header class="top-bar">
+                <h2>
+                    <span><img alt="WattDepot logo"
+                        src="wattdepot-logo.png"> WattDepot3 HTML
+                        API: Overview</span>
+                </h2>
+            </header>
+        </div>
+        <div class="row row-offcanvas row-offcanvas-left">
+            <div class="col-xs-6 col-sm-3 sidebar-offcanvas"
+                id="sidebar" role="navigation">
+                <div class="well sidebar-nav">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li> <a href="index.html">Home</a></li>
+                        <li class="active"><a href="HtmlApi.html">Overview</a></li>
+                        <li><a href="Locations.html">Locations</a>
+                        <li><a href="Sensors.html">Sensors</a>
+                        <li><a href="SensorGroups.html">Sensor
+                                Groups</a>
+                        <li><a href="SensorModels.html">Sensor
+                                Models</a>
+                        <li><a href="SensorProcesses.html">Sensor
+                                Processes</a>
+                        <li><a href="WattDepositories.html">WattDepositories</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-9">
+                <div class="content-box">
+                    <div class="content-box-title">WattDepot3</div>
+                    <div class="content-box-contents">
+                        <p>The WattDepot3 HTTP API accepts
+                            measurements about the physical world.</p>
+                        <p>In WattDepot3's model there are:
+                        <ul>
+                            <li><strong>Sensors</strong> - Sensors
+                                represent the device that measures the
+                                physical universe. Sensors have:
+                                <ul>
+                                    <li><strong>URIs</strong> - A
+                                        Internet address where sensor
+                                        processes can access their
+                                        measurements. (<em>Note:</em>
+                                        Sensor processes are not modeled
+                                        by WattDepot3.)</li>
+                                    <li><strong>Locations</strong>
+                                        - The location on the earth of
+                                        the sensor (e.g. Latitude,
+                                        Longitude, Altitude,
+                                        Description).</li>
+                                    <li><strong>Sensor
+                                            Models</strong> A description of the
+                                        type of sensor, the protocol and
+                                        version it is using.</li>
+                                    <li><strong>List of
+                                            Properties</strong> - A potentially
+                                        empty list of properties that
+                                        describe the individual sensor.</li>
+                                </ul></li>
+                            <li><strong>Sensor Groups</strong> -
+                                Are groups of sensors. WattDepot uses
+                                these groups for aggregation. We can
+                                group all the energy sensors in a
+                                building into a single group.</li>
+                            <li><strong>Sensor Processes</strong> A
+                                representation of how often to poll a
+                                Sensor. Processes that contact a Sensor
+                                and create Measurements should use the
+                                information in the SensorProcess to
+                                control their activities.</li>
+                            <li><strong>WattDepositories</strong> -
+                                Are responsible for storing the
+                                measurements made by the Sensors. They
+                                have an associated measurement type.</li>
+                            <li><strong>Measurements</strong> - Are
+                                made by Sensors and consist of the
+                                sensor that made the measurement, the
+                                time the measurement was made, the value
+                                of the measurement and the measurement
+                                type.
+                        </ul>
+                        <p>The individual pages to the left describe
+                            the HTTP API for Creating, Reading,
+                            Updating, and Deleting these entities.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="//code.jquery.com/jquery.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="dist/js/bootstrap.min.js"></script>
 </body>
 </html>
