--- a/SensorModels.html
+++ b/SensorModels.html
@@ -13,54 +13,60 @@
 </style>
 </head>
 <body>
-	<div class="container">
-		<div class="jumbotron">
-			<header class="top-bar">
-				<h2>
-					<span><img alt="WattDepot logo" src="wattdepot-logo.png">
-						WattDepot3 HTML API: Sensor Models</span>
-				</h2>
-			</header>
-		</div>
-		<div class="row row-offcanvas row-offcanvas-left">
-			<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar"
-				role="navigation">
-				<div class="well sidebar-nav">
-					<ul class="nav nav-pills nav-stacked">
-						<li><a href="HtmlApi.html">Home</a></li>
-						<li><a href="Locations.html">Locations</a>
-						<li><a href="Sensors.html">Sensors</a>
-						<li class="active"><a href="SensorModels.html">Sensor
-								Models</a>
-						<li><a href="SensorGroups.html">Sensor Groups</a>
-						<li><a href="WattDepositories.html">WattDepositories</a></li>
-						<li><a href="Measurements.html">Measurements</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-9">
-				<header> </header>
-				<div class="card">
-					<section id="get_sensormodels">
-						<header>
-							<h2>
-								<span class="big-type">GET</span> /wattdepot/sensormodels
-							</h2>
-						</header>
-						<div class="card-info">
-							http://server.wattdepot.org/wattdepot/sensormodels <a
-								class="btn right"
-								onclick="$('#get_sensormodels_response_long').slideToggle()"><b>Response
-									<span class="caret"></span>
-							</b></a>
-						</div>
-						<div class="card-info-more" id="get_sensormodels_response_long"
-							display="none">
-							<pre>
+    <div class="container">
+        <div class="jumbotron">
+            <header class="top-bar">
+                <h2>
+                    <span><img alt="WattDepot logo"
+                        src="wattdepot-logo.png"> WattDepot3 HTML
+                        API: Sensor Models</span>
+                </h2>
+            </header>
+        </div>
+        <div class="row row-offcanvas row-offcanvas-left">
+            <div class="col-xs-6 col-sm-3 sidebar-offcanvas"
+                id="sidebar" role="navigation">
+                <div class="well sidebar-nav">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li> <a href="index.html">Home</a></li>
+                        <li><a href="HtmlApi.html">Overview</a></li>
+                        <li><a href="Locations.html">Locations</a>
+                        <li><a href="Sensors.html">Sensors</a>
+                        <li><a href="SensorGroups.html">Sensor
+                                Groups</a>
+                        <li class="active"><a
+                            href="SensorModels.html">Sensor Models</a>
+                        <li><a href="SensorProcesses.html">Sensor
+                                Processes</a>
+                        <li><a href="WattDepositories.html">WattDepositories</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-9">
+                <header> </header>
+                <div class="card">
+                    <section id="get_sensormodels">
+                        <header>
+                            <h2>
+                                <span class="big-type">GET</span>
+                                /wattdepot/sensormodels
+                            </h2>
+                        </header>
+                        <div class="card-info">
+                            http://server.wattdepot.org/wattdepot/sensormodels
+                            <a class="btn right"
+                                onclick="$('#get_sensormodels_response_long').slideToggle()"><b>Response
+                                    <span class="caret"></span>
+                            </b></a>
+                        </div>
+                        <div class="card-info-more"
+                            id="get_sensormodels_response_long"
+                            display="none">
+                            <pre>
 		      <code>
 <span>[</span>
    <span>{</span>
-      <span>&quot;id&quot;</span><span>:</span> <span>&quot;egauge1.0&quot;,</span>
+      <span>&quot;id&quot;</span><span>:</span> <span>&quot;egauge1&quot;,</span>
       <span>&quot;protocol&quot;</span><span>:</span> <span>&quot;eGauge&quot;,</span>
       <span>&quot;type&quot;</span><span>:</span> <span>&quot;EGAUGE&quot;,</span>
       <span>&quot;version&quot;</span><span>:</span> <span>&quot;1.0&quot;</span>
@@ -69,68 +75,73 @@
       <span>&quot;id&quot;</span><span>:</span> <span>&quot;shark1&quot;,</span>
       <span>&quot;protocol&quot;</span><span>:</span> <span>&quot;MODBUS&quot;,</span>
       <span>&quot;type&quot;</span><span>:</span> <span>&quot;Shark 200&quot;,</span>
-      <span>&quot;version&quot;</span><span>:</span> <span>&quot;1.03&quot;,</span>
+      <span>&quot;version&quot;</span><span>:</span> <span>&quot;1.03&quot;</span>
    <span class="p">}</span>
 <span class="p">]</span>
 		      </code>
 		    </pre>
-						</div>
-						<div class="card-description">
-							<p>Get a full list of defined Sensor Models.</p>
-						</div>
-					</section>
-				</div>
-				<div class="card">
-					<section id="get_sensormodel">
-						<header>
-							<h2>
-								<span class="big-type">GET</span> /wattdepot/sensormodel/<span>{sensormodel_id}</span>
-							</h2>
-						</header>
-						<div class="card-info">
-							http://server.wattdepot.org/wattdepot/sensormodel/egauge1.0 <a
-								class="btn right"
-								onclick="$('#get_sensormodel_response').slideToggle()"><b>Response
-									<span class="caret"></span>
-							</b></a>
-						</div>
-						<div class="card-info-more" id="get_sensormodel_response"
-							display="none">
-							<pre>
+                        </div>
+                        <div class="card-description">
+                            <p>Get a full list of defined Sensor
+                                Models.</p>
+                        </div>
+                    </section>
+                </div>
+                <div class="card">
+                    <section id="get_sensormodel">
+                        <header>
+                            <h2>
+                                <span class="big-type">GET</span>
+                                /wattdepot/sensormodel/<span>{sensormodel_id}</span>
+                            </h2>
+                        </header>
+                        <div class="card-info">
+                            http://server.wattdepot.org/wattdepot/sensormodel/egauge1
+                            <a class="btn right"
+                                onclick="$('#get_sensormodel_response').slideToggle()"><b>Response
+                                    <span class="caret"></span>
+                            </b></a>
+                        </div>
+                        <div class="card-info-more"
+                            id="get_sensormodel_response" display="none">
+                            <pre>
               <code>
 <span>{</span>
-   <span>&quot;id&quot;</span><span>:</span> <span>&quot;egauge1.0&quot;,</span>
+   <span>&quot;id&quot;</span><span>:</span> <span>&quot;egauge1&quot;,</span>
    <span>&quot;protocol&quot;</span><span>:</span> <span>&quot;eGauge&quot;,</span>
    <span>&quot;type&quot;</span><span>:</span> <span>&quot;EGAUGE&quot;,</span>
    <span>&quot;version&quot;</span><span>:</span> <span>&quot;1.0&quot;</span>
 <span class="p">}</span>
               </code>
             </pre>
-						</div>
-						<div class="card-description">
-							<p>Get the Sensor Model with the given sensormodel_id.</p>
-						</div>
-					</section>
-				</div>
-				<div class="card">
-					<section id="post_sensormodel">
-						<header>
-							<h2>
-								<span class="big-type">PUT</span> /wattdepot/sensormodel/
-							</h2>
-						</header>
-						<div class="card-info">
-							curl -F '{id :"egauge1.0", "protocol": "eGauge", "type":
-							"EGAUGE", "version": "1.0"}'
-							http://server.wattdepot.org/wattdepot/sensormodel/ <a
-								class="btn right"
-								onclick="$('#put_sensormodel_response').slideToggle()"><b>Response
-									<span class="caret"></span>
-							</b></a>
-						</div>
-						<div class="card-info-more" id="put_sensormodel_response"
-							display="none">
-							<pre>
+                        </div>
+                        <div class="card-description">
+                            <p>Get the Sensor Model with the given
+                                sensormodel_id.</p>
+                        </div>
+                    </section>
+                </div>
+                <div class="card">
+                    <section id="post_sensormodel">
+                        <header>
+                            <h2>
+                                <span class="big-type">PUT</span>
+                                /wattdepot/sensormodel/
+                            </h2>
+                        </header>
+                        <div class="card-info">
+                            curl -F '{id :"egauge1", "protocol":
+                            "eGauge", "type": "EGAUGE", "version":
+                            "1.0"}'
+                            http://server.wattdepot.org/wattdepot/sensormodel/
+                            <a class="btn right"
+                                onclick="$('#put_sensormodel_response').slideToggle()"><b>Response
+                                    <span class="caret"></span>
+                            </b></a>
+                        </div>
+                        <div class="card-info-more"
+                            id="put_sensormodel_response" display="none">
+                            <pre>
               <code>
 <span>{</span>
    <span>&quot;status&quot;</span><span>:</span> <span>200,</span>
@@ -138,31 +149,33 @@
 <span class="p">}</span>
               </code>
             </pre>
-						</div>
-						<div class="card-description">
-							<p>Add the Sensor Model. Will return the status. Error status if
-								duplicate unique id.</p>
-						</div>
-					</section>
-				</div>
-				<div class="card">
-					<section id="del_sensormodel">
-						<header>
-							<h2>
-								<span class="big-type">DEL</span> /wattdepot/sensormodel/<span>{sensormodel_id}</span>
-							</h2>
-						</header>
-						<div class="card-info">
-							curl -X DELETE
-							http://server.wattdepot.org/wattdepot/sensormodel/egauge1.0 <a
-								class="btn right"
-								onclick="$('#del_sensormodel_response').slideToggle()"><b>Response
-									<span class="caret"></span>
-							</b></a>
-						</div>
-						<div class="card-info-more" id="del_sensormodel_response"
-							display="none">
-							<pre>
+                        </div>
+                        <div class="card-description">
+                            <p>Add the Sensor Model. Will return the
+                                status. Error status if duplicate unique
+                                id.</p>
+                        </div>
+                    </section>
+                </div>
+                <div class="card">
+                    <section id="del_sensormodel">
+                        <header>
+                            <h2>
+                                <span class="big-type">DEL</span>
+                                /wattdepot/sensormodel/<span>{sensormodel_id}</span>
+                            </h2>
+                        </header>
+                        <div class="card-info">
+                            curl -X DELETE
+                            http://server.wattdepot.org/wattdepot/sensormodel/egauge1
+                            <a class="btn right"
+                                onclick="$('#del_sensormodel_response').slideToggle()"><b>Response
+                                    <span class="caret"></span>
+                            </b></a>
+                        </div>
+                        <div class="card-info-more"
+                            id="del_sensormodel_response" display="none">
+                            <pre>
               <code>
 <span>{</span>
    <span>&quot;status&quot;</span><span>:</span> <span>200,</span>
@@ -170,21 +183,23 @@
 <span class="p">}</span>
               </code>
             </pre>
-						</div>
-						<div class="card-description">
-							<p>Deletes the Sensor Model with the given sensormodel_id. Will
-								return the status. Error status if duplicate unique id.</p>
-						</div>
-					</section>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="main"></div>
+                        </div>
+                        <div class="card-description">
+                            <p>Deletes the Sensor Model with the
+                                given sensormodel_id. Will return the
+                                status. Error status if sensormodel_id
+                                is not defined.</p>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="main"></div>
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="//code.jquery.com/jquery.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="dist/js/bootstrap.min.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="//code.jquery.com/jquery.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="dist/js/bootstrap.min.js"></script>
 </body>
 </html>
