--- a/index.html
+++ b/index.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>WattDepot Redesigned</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
-  </head>
-  <body>
-    <h1>WattDepot3</h1>
-
-    <a href="HtmlApi.html">HTML API</a>
-
+<head>
+<title>WattDepot Redesigned</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Bootstrap -->
+<link rel="stylesheet" href="dist/css/bootstrap.min.css">
+<!-- Optional theme -->
+<link rel="stylesheet" href="dist/css/bootstrap-theme.min.css">
+<link rel="stylesheet/less" type="text/css" href="style.less">
+<script src="less-1.3.0.min.js"></script>
+</head>
+<body>
+    <div class="container">
+        <div class="jumbotron">
+            <header class="top-bar">
+                <h2>
+                    <span><img alt="WattDepot logo"
+                        src="wattdepot-logo.png"> WattDepot3:
+                        WattDepot Redesigned</span>
+                </h2>
+            </header>
+        </div>
+        <div class="row row-offcanvas row-offcanvas-left">
+            <div class="col-xs-6 col-sm-3 sidebar-offcanvas"
+                id="sidebar" role="navigation">
+                <div class="well sidebar-nav">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li class="active"><a href="index.html">Home</a>
+                        <li><a href="HtmlApi.html">HTML API</a></li>
+                        <li><a href="Starting.html">Starting up
+                                WattDepot3</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-9">
+                <div class="content-box">
+                    <div class="content-box-title">WattDepot3</div>
+                    <div class="content-box-contents">Building on
+                        the success of WattDepot, we are re-designing
+                        WattDepot to be massively scalable and support a
+                        much wider array of measurements.</div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-  </body>
+    <script src="dist/js/bootstrap.min.js"></script>
+</body>
 </html>
