--- a/src/main/java/org/wattdepot/server/datamodel/package.html
+++ b/src/main/java/org/wattdepot/server/datamodel/package.html
@@ -1,3 +1,5 @@
 <body>
-Provides classes relevant to any WattDepot data model. Defines the 
+    Provides classes relevant to any WattDepot data model.
+    <p>Defines the objects that WattDepot understands. Each of these
+        classes can output themselves as JSON strings.</p>
 </body>
